--- a/server/internal/ui/views/pages/dashboard.html
+++ b/server/internal/ui/views/pages/dashboard.html
@@ -28,7 +28,7 @@
 <div class="flex flex-col">
    <div class="-m-1.5 overflow-x-auto">
       <div class="p-5 px-16 min-w-full inline-block align-middle">
-         <div class="flex flex-col max-h-[85vh] border border-gray-200 dark:border-neutral-700 rounded-lg  ">
+         <div class="flex flex-col max-h-[85vh] border border-gray-200 dark:border-neutral-700 rounded-t-lg  ">
             <div class="overflow-y-auto flex-1 rounded-lg">
                <table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700 relative">
                   <thead class="bg-gray-50 dark:bg-neutral-700 sticky top-0 ">
